[package]
name = "iris-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.31"
tracing = "0.1"
tracing-subscriber = "0.3"


